SERVER-19340 Avoid type aliasing in the random number generator.